deposit sheet pool